adds did-auth request and response support
- adds controllers, routes, tests, message types,
  handlers, and docs for /didauthrequest and response
- adds support for (un-)wrapping and verifying
  signature fields
- fixes minor inconsistency between docs and code
  (POST connectionoffer route , did -> myDid)
